--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeViewer.WPF.Controls.TextEditor.csproj
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeViewer.WPF.Controls.TextEditor.csproj
@@ -91,5 +91,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GCodeViewer.WPF.MVVM.Helpers\GCodeViewer.WPF.MVVM.Helpers.csproj">
+      <Project>{3baff321-457d-47a4-a589-d3b197afc740}</Project>
+      <Name>GCodeViewer.WPF.MVVM.Helpers</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
