throttle turned into extension method

--- a/src/GCodeViewer.WPF.MVVM.Helpers/GCodeViewer.WPF.MVVM.Helpers.csproj
+++ b/src/GCodeViewer.WPF.MVVM.Helpers/GCodeViewer.WPF.MVVM.Helpers.csproj
@@ -48,7 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventHelpers.cs" />
+    <Compile Include="ActionHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
