use new textbox instead of old one

--- a/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
+++ b/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
@@ -52,6 +52,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="NumericTextbox.cs" />
     <Compile Include="NumericUpDown.xaml.cs">
       <DependentUpon>NumericUpDown.xaml</DependentUpon>
       <SubType>Code</SubType>
