--- a/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
+++ b/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
@@ -8,8 +8,8 @@
     <OutputType>Library</OutputType>
     <LangVersion>8.0</LangVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GCodeViewer.WPF.Controls</RootNamespace>
-    <AssemblyName>GCodeViewer.WPF.Controls</AssemblyName>
+    <RootNamespace>GCodeViewer.WPF.Controls.PointCloud</RootNamespace>
+    <AssemblyName>GCodeViewer.WPF.Controls.PointCloud</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
