xml gcode syntax is now properly copied

--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeViewer.WPF.Controls.TextEditor.csproj
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeViewer.WPF.Controls.TextEditor.csproj
@@ -94,9 +94,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="GCodeSyntaxHighlighting.xml">
+    <EmbeddedResource Include="GCodeSyntaxHighlighting.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GCodeViewer.WPF.Controls\GCodeViewer.WPF.Controls.csproj">
