--- a/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
+++ b/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera\OrbitCamera.cs" />
+    <Compile Include="Helpers\MiscHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderable.cs" />
     <Compile Include="RenderableType.cs" />
@@ -99,6 +100,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets" Condition="Exists('..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
