--- a/src/Playground/OpenTkTest/packages.config
+++ b/src/Playground/OpenTkTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="6.0.1" targetFramework="net472" />
+  <package id="geometry3Sharp" version="1.0.324" targetFramework="net472" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
   <package id="OpenToolkit.Core" version="4.0.0-pre3" targetFramework="net472" />
