fix stl to renderable after some trial and error the stl is properly converted into something which can be displayed by the 3D-View

--- a/src/Playground/OpenTkTest/OpenTkTest.csproj
+++ b/src/Playground/OpenTkTest/OpenTkTest.csproj
@@ -103,7 +103,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Benchy_Christmas_1.stl">
+    <EmbeddedResource Include="STL-Files\Benchy_Christmas_1.stl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
@@ -112,6 +112,12 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EmbeddedResource Include="STL-Files\xyz-calibrationCube.stl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="STL-Files\testcube.stl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
