read shader files properly

--- a/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
+++ b/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
@@ -92,6 +92,13 @@
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="Shaders\shader.frag">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Shaders\shader.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Viewer3D.xaml">
