move classes to corresponding folder

--- a/src/GCodeViewer.Library.PointExtraction/GCodeViewer.Library.csproj
+++ b/src/GCodeViewer.Library.PointExtraction/GCodeViewer.Library.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GCodeViewer.WPF.Controls.PointCloud\GCodeViewer.WPF.Controls.PointCloud.csproj" />
+  </ItemGroup>
+
 </Project>
