--- a/src/GCodeViewer.Library.PointExtraction/GCodeViewer.Library.csproj
+++ b/src/GCodeViewer.Library.PointExtraction/GCodeViewer.Library.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="geometry3Sharp" Version="1.0.324" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
