--- a/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
+++ b/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
@@ -79,6 +79,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GCodeViewer.Helpers\GCodeViewer.Helpers.csproj">
+      <Project>{a34ea9ad-edcc-44d9-8b58-29ba9f7f2061}</Project>
+      <Name>GCodeViewer.Helpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GCodeViewer.WPF.MVVM.Helpers\GCodeViewer.WPF.MVVM.Helpers.csproj">
       <Project>{3baff321-457d-47a4-a589-d3b197afc740}</Project>
       <Name>GCodeViewer.WPF.MVVM.Helpers</Name>
