--- a/src/GCodeViewer.WPF/GCodeViewer.WPF.csproj
+++ b/src/GCodeViewer.WPF/GCodeViewer.WPF.csproj
@@ -71,7 +71,7 @@
     </Compile>
     <Compile Include="ViewModels\PagingViewModel.cs" />
     <Compile Include="ViewModels\Viewer3DViewModel.cs" />
-    <Page Include="Pages\MainWindow.xaml">
+    <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -79,7 +79,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Pages\MainWindow.xaml.cs">
+    <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
