--- a/src/GCodeViewer.WPF/packages.config
+++ b/src/GCodeViewer.WPF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="geometry3Sharp" version="1.0.324" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
   <package id="OpenTK" version="3.2" targetFramework="net472" />
 </packages>
