--- a/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
+++ b/src/GCodeViewer.WPF.Controls.PointCloud/GCodeViewer.WPF.Controls.PointCloud.csproj
@@ -1,98 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B166ABC-A1F9-4160-BA5A-0A332BFD8ED0}</ProjectGuid>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
     <LangVersion>8.0</LangVersion>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GCodeViewer.WPF.Controls.PointCloud</RootNamespace>
-    <AssemblyName>GCodeViewer.WPF.Controls.PointCloud</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenTK, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.3.1.0\lib\net20\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Core, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Core.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Graphics, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Graphics.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Graphics.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Input, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Input.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Input.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Mathematics, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Mathematics.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Mathematics.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Windowing.Common, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Windowing.Common.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Windowing.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Windowing.Desktop, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Windowing.Desktop.4.0.0-pre3\lib\net472\OpenToolkit.Windowing.Desktop.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenToolkit.Windowing.GraphicsLibraryFramework, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenToolkit.Windowing.GraphicsLibraryFramework.4.0.0-pre3\lib\net472\OpenToolkit.Windowing.GraphicsLibraryFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Camera\OrbitCamera.cs" />
-    <Compile Include="IPoint3F.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderable.cs" />
-    <Compile Include="RenderableType.cs" />
-    <Compile Include="Shaders\Shader.cs" />
-    <Compile Include="Shaders\ShaderBuilder.cs" />
-    <Compile Include="Primitives\VertexBufferObject.cs" />
-    <Compile Include="Viewer3D.xaml.cs">
-      <DependentUpon>Viewer3D.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="OpenTK.dll.config" />
-    <None Include="packages.config" />
     <EmbeddedResource Include="Shaders\shader.frag">
       <Generator>ResXFileCodeGenerator</Generator>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -102,23 +17,20 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Viewer3D.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <ProjectReference Include="..\GCodeViewer.Helpers\GCodeViewer.Helpers.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GCodeViewer.Helpers\GCodeViewer.Helpers.csproj">
-      <Project>{a34ea9ad-edcc-44d9-8b58-29ba9f7f2061}</Project>
-      <Name>GCodeViewer.Helpers</Name>
-    </ProjectReference>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="OpenTK" Version="3.2.0" />
+    <PackageReference Include="OpenTK.GLControl" Version="3.1.0" />
+    <PackageReference Include="OpenToolkit.Core" Version="4.0.0-pre3" />
+    <PackageReference Include="OpenToolkit.Graphics" Version="4.0.0-pre3" />
+    <PackageReference Include="OpenToolkit.Input" Version="4.0.0-pre3" />
+    <PackageReference Include="OpenToolkit.Mathematics" Version="4.0.0-pre3" />
+    <PackageReference Include="opentoolkit.redist.glfw" Version="3.3.0-pre20190424184726" />
+    <PackageReference Include="OpenToolkit.Windowing.Common" Version="4.0.0-pre3" />
+    <PackageReference Include="OpenToolkit.Windowing.Desktop" Version="4.0.0-pre3" />
+    <PackageReference Include="OpenToolkit.Windowing.GraphicsLibraryFramework" Version="4.0.0-pre3" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets" Condition="Exists('..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets'))" />
-  </Target>
 </Project>
