remove old projects and move project to folder

--- a/src/GCodeViewer.Library.Tests/GCodeViewer.Library.Tests.csproj
+++ b/src/GCodeViewer.Library.Tests/GCodeViewer.Library.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GCodeViewer.Library.PointExtraction\GCodeViewer.Library.csproj" />
+    <ProjectReference Include="..\GCodeViewer.Library\GCodeViewer.Library.csproj" />
   </ItemGroup>
 
 </Project>
