Slicing an stl file now works correctly

--- a/src/Playground/Slic3rTest/Slic3rTest.csproj
+++ b/src/Playground/Slic3rTest/Slic3rTest.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="xyz-calibrationCube.stl" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="xyz-calibrationCube.stl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\GCodeViewer.Library\GCodeViewer.Library.csproj" />
   </ItemGroup>
 
