--- a/src/GCodeViewer.WPF/GCodeViewer.WPF.csproj
+++ b/src/GCodeViewer.WPF/GCodeViewer.WPF.csproj
@@ -14,8 +14,8 @@
   <ItemGroup>
     <ProjectReference Include="..\GCodeViewer.Helpers\GCodeViewer.Helpers.csproj" />
     <ProjectReference Include="..\GCodeViewer.Library\GCodeViewer.Library.csproj" />
-    <ProjectReference Include="..\GCodeViewer.WPF.Controls.PointCloud\GCodeViewer.WPF.Controls.PointCloud.csproj" />
     <ProjectReference Include="..\GCodeViewer.WPF.Controls.TextEditor\GCodeViewer.WPF.Controls.TextEditor.csproj" />
+    <ProjectReference Include="..\GCodeViewer.WPF.Controls.Viewer3D\GCodeViewer.WPF.Controls.Viewer3D.csproj" />
     <ProjectReference Include="..\GCodeViewer.WPF.Controls\GCodeViewer.WPF.Controls.csproj" />
     <ProjectReference Include="..\GCodeViewer.WPF.MVVM.Helpers\GCodeViewer.WPF.MVVM.Helpers.csproj" />
   </ItemGroup>
