--- a/src/GCodeViewer.Library/GCodeViewer.Library.csproj
+++ b/src/GCodeViewer.Library/GCodeViewer.Library.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GCodeViewer.WPF.Controls.PointCloud\GCodeViewer.WPF.Controls.PointCloud.csproj" />
+    <ProjectReference Include="..\GCodeViewer.WPF.Controls.PointCloud\GCodeViewer.WPF.Controls.Viewer3D.csproj" />
+    <ProjectReference Include="..\GCodeViewer.WPF.Controls.Viewer3D\GCodeViewer.WPF.Controls.Viewer3D.csproj" />
   </ItemGroup>
 
   <ItemGroup>
